# congress-twitter

./: const.py  pyproject.toml
data/interim/: mentions.csv  theme_year_count.csv  users.csv
data/processed/: mentioned_members.csv  mentioned_members_outliers.csv  popular_member_themes.csv  theme_counts.csv  topics.csv  topics_year.csv  tweets.csv
notebooks/: report.ipynb
src/: const.py
src/features/: build_features.py
src/visualization/: stop_words.py  visualize.py
